--- a/webapp/src/ionicapp/www/templates/viewDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewDevice.html
@@ -46,8 +46,7 @@
       <div id="viewDevice-markdown346" style="text-align:center;" class="show-list-numbers-and-dots">
         <p style="color:#AAAAAA;font-size:12px;">{{ newfirmwareavailable ? "New firmware is available" : "" }}</p>
       </div>
-      <button id="viewDevice-button21" ng-click="upgradeDeviceFirmware()" ng-show="newfirmwareversion >= data.version || data.version == &quot;UNKNOWN&quot;" class="button button-positive button-block button-outline">Upgrade Device Firmware</button>
-      <button id="viewDevice-button154" ng-click="viewDeviceLocation()" class="button button-positive button-block">Set Device Location</button>
+      <button id="viewDevice-button21" ng-click="upgradeDeviceFirmware()" ng-disabled="newfirmwareversion < data.version &amp;&amp; data.version != &quot;UNKNOWN&quot;" class="button button-positive button-block">Upgrade Device Firmware</button>
     </form>
     <div id="viewDevice-markdown252" class="show-list-numbers-and-dots">
       <p style="color:#387EF5;">Device operations</p>
