--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -78,6 +78,32 @@ table, th, td {
 	width: 49% !important;
 }
 
+.widget_button_backward_forward {
+	width: 8% !important;
+	display: inline-block;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+.widget_button_backward_forward_filler {
+	width: 82% !important;
+	display: inline-block;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+.widget_button_backward_forward_container {
+	height: 40px !important;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
 .widget_button {
 	width: 48% !important;
 	height: 65px;
