Fixed chart yaxes max value

--- a/webapp/src/ionicapp/www/templates/order.html
+++ b/webapp/src/ionicapp/www/templates/order.html
@@ -26,7 +26,9 @@
     <div id="order-markdown29" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">Paypal Test buyer accounts:</p>
 
-      <p style="color:#AAAAAA;font-size:12px;">dev1.sg@brtchip.com, dev1.us@brtchip.com, dev1.uk@brtchip.com </p>
+      <p style="color:#AAAAAA;font-size:12px;">dev1.sg@brtchip.com, dev1.us@brtchip.com, dev1.uk@brtchip.com, </p>
+
+      <p style="color:#AAAAAA;font-size:12px;">dev1.in@brtchip.com, dev1.ch@brtchip.com, dev1.ge@brtchip.com, </p>
 
       <p style="color:#AAAAAA;font-size:12px;">pass: BrtIoTPortal</p>
     </div>
