--- a/webapp/src/ionicapp/www/templates/deviceLocation.html
+++ b/webapp/src/ionicapp/www/templates/deviceLocation.html
@@ -42,7 +42,7 @@
         <div>{{info}}</div>
       </ui-gmap-window>
 
-      <ui-gmap-markers models="markers" coords="&quot;coords&quot;" options="&quot;options&quot;" click="onClickMarker">
+      <ui-gmap-markers models="markers" coords="&quot;coords&quot;" icon="&quot;icon&quot;" options="&quot;options&quot;" fit="getFit()" click="onClickMarker">
       </ui-gmap-markers>
 
     </ui-gmap-google-map>
