--- a/webapp/src/ionicapp/www/templates/deviceLocation.html
+++ b/webapp/src/ionicapp/www/templates/deviceLocation.html
@@ -19,23 +19,6 @@
         <select ng-options="device.devicename as device.devicename for device in devices" ng-model="data.devicename" ng-change="changeDevice(data.devicename)"></select>
       </label>
     </form>
-    <form id="deviceLocation-form225" class="list" ng-show="data.devicename != &quot;All devices&quot;">
-      <div id="deviceLocation-markdown360" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device location</p>
-      </div>
-      <label class="item item-input widget_button_half" id="deviceLocation-input167">
-        <span class="input-label">Latitude</span>
-        <input type="text" placeholder="" ng-model="data.location.latitude">
-      </label>
-      <label class="item item-input widget_button_half" id="deviceLocation-input168">
-        <span class="input-label">Longitude</span>
-        <input type="text" placeholder="" ng-model="data.location.longitude">
-      </label>
-    </form>
-    <form id="deviceLocation-form228" class="list">
-      <button id="deviceLocation-button152" ng-click="setDeviceLocation(data.devicename)" class="button button-positive button-block">Set device location</button>
-      <button id="deviceLocation-button155" ng-click="deleteDeviceLocation(data.devicename)" class="button button-positive button-block button-outline">Delete device location</button>
-    </form>
     <ui-gmap-google-map ng-if="map.center" center="map.center" zoom="map.zoom" options="map.options" style="height:400px;">
 
       <ui-gmap-window coords="selectedCoords" show="windowOptions.show" closeclick="onCloseClick()">
@@ -46,6 +29,13 @@
       </ui-gmap-markers>
 
     </ui-gmap-google-map>
+    <div id="deviceLocation-markdown360" ng-show="data.devicename != &quot;All devices&quot;" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#AAAAAA;font-size:12px;">(Latitude: {{ data.location.latitude }}, Longitude: {{ data.location.longitude }})</p>
+    </div>
+    <form id="deviceLocation-form228" class="list" ng-show="data.devicename != &quot;All devices&quot;">
+      <button id="deviceLocation-button152" ng-click="setDeviceLocation(data.devicename)" class="button button-positive button-block">Set device location</button>
+      <button id="deviceLocation-button155" ng-click="deleteDeviceLocation(data.devicename)" class="button button-positive button-block button-outline">Delete device location</button>
+    </form>
     <div class="spacer" style="width: 300px; height: 50px;"></div>
   </ion-content>
 </ion-view>
